adds working unsupervised classification  module

--- a/notebooks/distance_based_classification.ipynb
+++ b/notebooks/distance_based_classification.ipynb
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
     "    res_show = graph.forward(*data[i:i+1])\n",
     "    plt.figure()\n",
     "    plt.imshow(res_show[0,:,:,:])  # Example plot\n",
-    "    plt.title('CUVIS AI Classification')\n",
+    "    plt.title('Spectral Angle Mapper Classification')\n",
     "    filename = os.path.join(base_path\n",
     "    , f\"frame_{i}.png\")\n",
     "    plt.axis('off')\n",
@@ -366,7 +366,6 @@
     "    plt.close()\n",
     "\n",
     "# Save as an animated GIF\n",
-    "\n",
     "# Collect all the frames\n",
     "frames = []\n",
     "for i in range(len(data)):\n",
@@ -407,11 +406,6 @@
     "\n",
     "Take a peek at the [source code](https://github.com/cubert-hyperspectral/cuvis.ai/blob/main/cuvis_ai/distance/distance.py) and try out a different one with the dataset!"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
