--- a/strawberry_classification/inference.ipynb
+++ b/strawberry_classification/inference.ipynb
@@ -159,6 +159,12 @@
    "cell_type": "markdown",
    "id": "13",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14",
+   "metadata": {},
    "source": [
     "## Infer one cube\n",
     "\n",
@@ -168,17 +174,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
-    "MESU = 'D:/FreshTwin/swir/Strawberry_133_5_22_04_25.cu3s' # TODO: change mesu"
+    "MESU = '../data/Strawberry_SWIR/Strawberry_133_5_22_04_25.cu3s'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "source": [
     "## Display the result"
@@ -209,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": []
