expands example, and incorporates feedback from Robert

--- a/notebooks/anomaly_detection.ipynb
+++ b/notebooks/anomaly_detection.ipynb
@@ -13,6 +13,7 @@
     "import cuvis_ai\n",
     "import warnings\n",
     "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
     "import torchvision.transforms as T\n",
     "from utils import generate_output_gif\n",
     "warnings.filterwarnings('ignore')"
@@ -31,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data: Lentils\n",
+    "### Data: Lentils # we actually need to switch to that dataset\n",
     "\n",
     "In this notebook, we will be using a CUVIS.AI session file (video file) which contains multiple sequential hyperspectral datacubes. We begin by loading the hyperspectral dataset that will be used to evaluate different anomaly detection methods. The RX detector will later operate on this data to identify pixels with statistically distinct spectral signatures."
    ]
@@ -129,7 +130,7 @@
    "outputs": [],
    "source": [
     "# Distance decider node\n",
-    "threshold = 200000000 # This threshold is set for the aquarium dataset! It will vary depending on the dataset.\n",
+    "threshold = 150 # This threshold is set for the aquarium dataset! It will vary depending on the dataset.\n",
     "decider = cuvis_ai.deciders.BinaryDecider(threshold)"
    ]
   },
@@ -137,7 +138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have this simple, two-stage node, we connect them indicating the PCA node will be the entry point for data, which will then flow to the GMM node.\n",
+    "Now that we have this simple, two-stage node, we connect them indicating the RX Detector will be the entry point for our data, which will then flow to the Binary Decider node to classify each pixel as anomalous or normal (0).\n",
     "\n",
     "*This will throw an initialization warning \"Unsatisfied dimensionality constraint\", but this is expected behavior*"
    ]
@@ -177,9 +178,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Train the Model\n",
+    "### Evaluate Images\n",
     "\n",
-    "As GMM is an unsupervised classifier, we will need to train the model given a subset of the data. The `fit` method takes a number of sample datacubes from our dataloader and uses that to train the graph. Try adjusting the number of training datacubes and observe the impact that has on the training time. We will then use the `forward` method to generate the output results. Tru "
+    "We can employ the RX detector in two ways. First, we can use it on a per-image basis, meaning that the image statistics are calculate on every image. This will only use the `forward` method. We will explore the other method later."
    ]
   },
   {
@@ -188,9 +189,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use first four images to fit the data\n",
-    "number_of_training_images = 1\n",
-    "out = graph.forward(*data[0:number_of_training_images])"
+    "# Let's calculate statistics for just a single image\n",
+    "number_of_eval_images = 1\n",
+    "out = graph.forward(*data[0:number_of_eval_images])"
    ]
   },
   {
@@ -199,8 +200,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
     "plt.figure()\n",
+    "plt.title('Single RX Detector Output')\n",
     "plt.imshow(out[0])\n",
     "plt.show()"
    ]
@@ -226,6 +227,52 @@
     "    base_path,\n",
     "    gif_name=\"rx_result.gif\",\n",
     "    title=\"(Reed-Xiaoli) Anomaly Detector\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train an RX Model Using Statistics\n",
+    "\n",
+    "Now that we've tested an RX detector using per-pixel image statistics, we will now demonstrate how we can use a build an anomaly classifier in a more \"supervised\" manner.\n",
+    "\n",
+    "For instance, assume that we have a set of images which have no anomalies. We can use these normal images to build out the backend statistics (mean, $\\boldsymbol{\\mu}$ and covariance, $\\boldsymbol{\\Sigma}$) and then apply them to all other images in the dataset.\n",
+    "\n",
+    "The interface we use to do this is nearly the same as using per-image statistics. In this case, we will call the `fit` method to mark that we want to calculate these summary statistics and train our anomaly detector."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's calculate statistics for just a single image\n",
+    "number_of_train_images = 2\n",
+    "out = graph.fit(*data[0:number_of_train_images])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After training, inference in performed the same way using the `forward` method. Execute the cell below to generate a new gif with the pre-trained RX detector, and see how the performance differs!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generate_output_gif(\n",
+    "    graph,\n",
+    "    data,\n",
+    "    base_path,\n",
+    "    gif_name=\"rx_results_global.gif\",\n",
+    "    title=\"(Reed-Xiaoli) Anomaly Detector, Global Statistics\"\n",
     ")"
    ]
   }
