--- a/notebooks/unsupervised_classification.ipynb
+++ b/notebooks/unsupervised_classification.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\dev\\cuvis.ai.examples\\.venv\\Lib\\site-packages\\cuvis\\General.py:4: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
+      "  import pkg_resources\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib widget\n",
     "import os\n",
@@ -45,16 +54,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    base_path = \"../data/cuvis_ai_video\"\n",
-    "    os.mkdir(base_path)\n",
-    "except FileExistsError as e:\n",
-    "    pass\n",
-    "if not os.path.exists(\"../data/cuvis_ai_video/Aquarium_Sample.cu3s\"):\n",
+    "base_path = \"../data/cuvis_ai_video\"\n",
+    "if not os.path.exists(base_path):\n",
     "    data_down = cuvis_ai.data.PublicDataSets()\n",
     "    data_down.download_dataset(\"Aquarium\", download_path=base_path)"
    ]
@@ -68,9 +73,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Width: 275, Height: 290, Channels 51\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's look at a single example\n",
     "cubes = glob.glob(f'{base_path}/*.cu3s')\n",
@@ -90,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +232,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cubert_dev",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -233,9 +246,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
